# file-engine

./: .gitignore  Cargo.toml  LICENSE  README.md  errors.toml
.github/workflows/: ci.yml
docs/: file-engine-design.md
examples/: basic_copy.rs  with_diagnostics.rs
src/: analyze.rs  compress.rs  engine.rs  error.rs  handle.rs  lib.rs  permissions.rs  progress.rs  sync.rs  watch.rs
src/operations/: copy.rs  mod.rs  move_op.rs
tests/: integration.rs
tests/integration/: analyze.rs  compress.rs  copy.rs  diagnostics.rs  move_op.rs  permissions.rs  sync.rs  watch.rs
